--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST=root:cJkrM13c6lyVFu438gjXH3CCmRjk5n2V@dpg-cp89ksol6cac73c0qdqg-a.oregon-postgres.render.com
-DB_NAME=liter_alura_db
-DB_USER=root
-DB_PASSWORD=cJkrM13c6lyVFu438gjXH3CCmRjk5n2V
+DB_HOST=dpg-cp8ba07109ks738iefl0-a.virginia-postgres.render.com
+DB_NAME=liter_alura_db_6l8w
+DB_USER=jonh
+DB_PASSWORD=l5uGU4TAN7H9olVMV3iOG85oP5psS65F
+DB_PORT=5432
